--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ simula/.vs/
 simula/.vs/*
 .build/
 .vscode/
+Windows Installer/
 
 !/simula/bin/debug/netcoreapp3.1/app.icon.64.png
 !/simula/bin/debug/netcoreapp3.1/app.icon.128.png
