--- a/Simula/Simula.csproj
+++ b/Simula/Simula.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Simula.Controls\Simula.Controls.csproj" />
     <ProjectReference Include="..\Simula.Editor\Simula.Editor.csproj" />
     <ProjectReference Include="..\Simula.Scripting.Packaging\Simula.Scripting.Packaging.csproj" />
     <ProjectReference Include="..\Simula.Scripting\Simula.Scripting.csproj" />
