--- a/Simula.Scripting.Utils/Simula.Scripting.Utils.csproj
+++ b/Simula.Scripting.Utils/Simula.Scripting.Utils.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <SatelliteResourceLanguages>zh-Hans</SatelliteResourceLanguages>
   </PropertyGroup>
 
   <ItemGroup>
