--- a/Simula.Scripting/Simula.Scripting.csproj
+++ b/Simula.Scripting/Simula.Scripting.csproj
@@ -6,6 +6,7 @@
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<Nullable>enable</Nullable>
 		<PreserveCompilationContext>true</PreserveCompilationContext>
+    <SatelliteResourceLanguages>zh-Hans</SatelliteResourceLanguages>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -15,6 +16,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Simula.Editor\Simula.Editor.csproj" />
+		<ProjectReference Include="..\Simula.Resources\Simula.Resources.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
