--- a/Simula.Scripting/Simula.Scripting.csproj
+++ b/Simula.Scripting/Simula.Scripting.csproj
@@ -20,7 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.11.0-beta1-final" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.8.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.1.0" />
 	</ItemGroup>
 </Project>
