--- a/Simula.Scripting/Simula.Scripting.csproj
+++ b/Simula.Scripting/Simula.Scripting.csproj
@@ -21,6 +21,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.8.0" />
+		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.1.0" />
 	</ItemGroup>
 </Project>
