--- a/Simula.Scripting/Simula.Scripting.csproj
+++ b/Simula.Scripting/Simula.Scripting.csproj
@@ -26,14 +26,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Emit\" />
-    <Folder Include="Native\" />
-    <Folder Include="Parser\Ast\" />
     <Folder Include="Completion\" />
+    <Folder Include="Native\Datatype\" />
     <Folder Include="Runtime\Environments\" />
     <Folder Include="Runtime\Debugger\" />
     <Folder Include="Runtime\Profiler\" />
     <Folder Include="Runtime\Interop\" />
-    <Folder Include="Workspace\" />
+    <Folder Include="Runtime\References\" />
   </ItemGroup>
 </Project>
